--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <div class="flagstate chip"></div>
     </div>
 
+    <div class="p1 bg"><div></div></div>
+
     <div class="p2 container">
       <div class="flags_container">
         <div class="flagcountry"></div>
@@ -52,6 +54,8 @@
       <div class="pronoun chip"></div>
       <div class="flagstate chip"></div>
     </div>
+
+    <div class="p2 bg"><div></div></div>
 
     <div class="score_boxes"></div>
 
