Added flag chip

--- a/index.html
+++ b/index.html
@@ -28,55 +28,59 @@
     </div>
 
     <div class="p1 container">
-      <div class="p1 character_container"></div>
-      <div class="flags_container">
-        <div class="flagcountry"></div>
-      </div>
+      <div class="placeholder_container"></div>
       <div class="name"></div>
       <div class="score_container">
         <div class="score"></div>
       </div>
+      <div class="edge">
+        <div class="p1 character_container"></div>
+      </div>
     </div>
 
     <div class="p1 under_chips">
+      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <div class="flagstate chip"></div>
+      <!-- <div class="flagstate chip"></div> -->
     </div>
 
     <div class="p1 chips">
+      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <div class="flagstate chip"></div>
+      <!-- <div class="flagstate chip"></div> -->
     </div>
 
     <!-- <div class="p1 bg"><div></div></div> -->
 
     <div class="p2 container">
-      <div class="p2 character_container"></div>
-      <div class="flags_container">
-        <div class="flagcountry"></div>
-      </div>
+      <div class="placeholder_container"></div>
       <div class="name"></div>
       <div class="score_container">
         <div class="score"></div>
       </div>
+      <div class="edge">
+        <div class="p2 character_container"></div>
+      </div>
     </div>
 
     <div class="p2 under_chips">
+      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <div class="flagstate chip"></div>
+      <!-- <div class="flagstate chip"></div> -->
     </div>
 
     <div class="p2 chips">
+      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <div class="flagstate chip"></div>
+      <!-- <div class="flagstate chip"></div> -->
     </div>
 
     <!-- <div class="p2 bg"><div></div></div> -->
