--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="tournament_logo"></div>
 
-    <div class="topleft container">
+    <div class="topleft_container">
       <div class="match_container">
         <div class="match"></div>
       </div>
