--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
         <div class="score"></div>
       </div>
       <div class="edge">
-        <div class="p1 character_container"></div>
+        <div class="p1 character_container hidden unhidden"></div>
       </div>
     </div>
 
     <div class="p1 under_chips">
-      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <!-- <div class="flagstate chip"></div> -->
+      <div class="flagstate chip"></div>
+      <div class="flagcountry chip"></div>
     </div>
 
     <div class="p1 chips">
-      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <!-- <div class="flagstate chip"></div> -->
+      <div class="flagstate chip"></div>
+      <div class="flagcountry chip"></div>
     </div>
 
-    <!-- <div class="p1 bg"><div></div></div> -->
+    <div class="p1 bg"><div></div></div>
 
     <div class="p2 container">
       <div class="placeholder_container"></div>
@@ -63,27 +63,27 @@
         <div class="score"></div>
       </div>
       <div class="edge">
-        <div class="p2 character_container"></div>
+        <div class="p2 character_container hidden unhidden"></div>
       </div>
     </div>
 
     <div class="p2 under_chips">
-      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <!-- <div class="flagstate chip"></div> -->
+      <div class="flagstate chip"></div>
+      <div class="flagcountry chip"></div>
     </div>
 
     <div class="p2 chips">
-      <div class="flagcountry chip"></div>
       <div class="seed chip"></div>
       <div class="twitter chip"></div>
       <div class="pronoun chip"></div>
-      <!-- <div class="flagstate chip"></div> -->
+      <div class="flagstate chip"></div>
+      <div class="flagcountry chip"></div>
     </div>
 
-    <!-- <div class="p2 bg"><div></div></div> -->
+    <div class="p2 bg"><div></div></div>
 
     <div class="dark score_boxes"></div>
     <div class="blue score_boxes"></div>
