Added doubles support

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="flagcountry chip"></div>
     </div>
 
-    <div class="p1 light hidden unhidden"><div></div></div>
+    <div class="p1 light hidden"><div></div></div>
     <div class="p1 bg hidden unhidden"><div></div></div>
 
     <div class="p2 container">
@@ -86,7 +86,7 @@
       <div class="flagcountry chip"></div>
     </div>
 
-    <div class="p2 light hidden unhidden"><div></div></div>
+    <div class="p2 light hidden"><div></div></div>
     <div class="p2 bg hidden unhidden"><div></div></div>
 
     <div class="dark score_boxes"></div>
